--- a/app/src/main/res/layout/item_data.xml
+++ b/app/src/main/res/layout/item_data.xml
@@ -34,5 +34,6 @@
         android:gravity="end"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"/>
 </LinearLayout>
