--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp"
     android:background="#F5F5F5">
 
 
@@ -14,7 +12,8 @@
         android:layout_height="20dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:layout_marginStart="8dp"/>
 
     <View
         android:layout_width="match_parent"
